--- a/main.html
+++ b/main.html
@@ -8,11 +8,9 @@
 
 <body>
 	
-	<img src="https://th.bing.com/th/id/R.3175dc540dfe6b9e4ac00517086e4700?rik=N5QK4nhTaaewfA&riu=http%3a%2f%2fwww.forestwander.com%2fwp-content%2foriginal%2f2011_02%2fbeautiful-pink-flower.jpg&ehk=odzj%2bukR0ES%2bVffERmcJ08qxlxnGZlOdQfyrBzhZj3A%3d&risl=&pid=ImgRaw&r=0" alt="flowerpicture" width=200
-<br>		
+	<img src="https://th.bing.com/th/id/R.3175dc540dfe6b9e4ac00517086e4700?rik=N5QK4nhTaaewfA&riu=http%3a%2f%2fwww.forestwander.com%2fwp-content%2foriginal%2f2011_02%2fbeautiful-pink-flower.jpg&ehk=odzj%2bukR0ES%2bVffERmcJ08qxlxnGZlOdQfyrBzhZj3A%3d&risl=&pid=ImgRaw&r=0" alt="flowerpicture" width=200<br>
 	<h1 id="f1" style="background-color:yellow" style="text-align:center">This beautiful pink flower is one of my favorite pictures. The composition of this turned out just right from this perspective and with a little effort the contrast of the background helps the focus and pink color of the flower to become vivid and alive</h1>
-   <img src="https://th.bing.com/th/id/R.e7dbc6594512849be1ea185771587808?rik=er3aawAO92Ax8w&riu=http%3a%2f%2f2.bp.blogspot.com%2f-ngmjXmcrD2k%2fUj6AbaKlcOI%2fAAAAAAAAAaA%2ffnlfDYl1pQ4%2fs1600%2fImage%2bof%2bflowers-Red-Abstract-Rose-Hd-Wallpaper-picture-of-flowers.jpg&ehk=tJyozS2Sj%2b7yHjzZcjqoQtoeUVZhn2vbbuZQXh8GiJI%3d&risl=&pid=ImgRaw&r=0" alt="rose" width=200
-	   <br>
+   <img src="https://th.bing.com/th/id/R.e7dbc6594512849be1ea185771587808?rik=er3aawAO92Ax8w&riu=http%3a%2f%2f2.bp.blogspot.com%2f-ngmjXmcrD2k%2fUj6AbaKlcOI%2fAAAAAAAAAaA%2ffnlfDYl1pQ4%2fs1600%2fImage%2bof%2bflowers-Red-Abstract-Rose-Hd-Wallpaper-picture-of-flowers.jpg&ehk=tJyozS2Sj%2b7yHjzZcjqoQtoeUVZhn2vbbuZQXh8GiJI%3d&risl=&pid=ImgRaw&r=0" alt="rose" width=200 <br>
 	<h1 id="f2" style="background:yellow" style="text-align:center">Roses belong to the family of plants called Rosaceae. All roses were originally wild: they grew in North America, Europe, northwest Africa and many parts of Asia and Oceania</h1>
 	
 	<!-- the entire body must be written by student -->
