--- a/main.html
+++ b/main.html
@@ -7,14 +7,15 @@
 </head>
 
 <body>
-	
-	<img src="https://th.bing.com/th/id/R.3175dc540dfe6b9e4ac00517086e4700?rik=N5QK4nhTaaewfA&riu=http%3a%2f%2fwww.forestwander.com%2fwp-content%2foriginal%2f2011_02%2fbeautiful-pink-flower.jpg&ehk=odzj%2bukR0ES%2bVffERmcJ08qxlxnGZlOdQfyrBzhZj3A%3d&risl=&pid=ImgRaw&r=0" alt="flowerpicture" width=200<br>
-	<h1 id="f1" style="background-color:yellow" style="text-align:center">This beautiful pink flower is one of my favorite pictures. The composition of this turned out just right from this perspective and with a little effort the contrast of the background helps the focus and pink color of the flower to become vivid and alive</h1>
-   <img src="https://th.bing.com/th/id/R.e7dbc6594512849be1ea185771587808?rik=er3aawAO92Ax8w&riu=http%3a%2f%2f2.bp.blogspot.com%2f-ngmjXmcrD2k%2fUj6AbaKlcOI%2fAAAAAAAAAaA%2ffnlfDYl1pQ4%2fs1600%2fImage%2bof%2bflowers-Red-Abstract-Rose-Hd-Wallpaper-picture-of-flowers.jpg&ehk=tJyozS2Sj%2b7yHjzZcjqoQtoeUVZhn2vbbuZQXh8GiJI%3d&risl=&pid=ImgRaw&r=0" alt="rose" width=200 <br>
-	<h1 id="f2" style="background:yellow" style="text-align:center">Roses belong to the family of plants called Rosaceae. All roses were originally wild: they grew in North America, Europe, northwest Africa and many parts of Asia and Oceania</h1>
-	
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+	<h1 style="background-color:yellow" id="f1"><img src="https://th.bing.com/th/id/R.b2d5805b0d8158cd630c83a65d084fa8?rik=3vR4BLIDSFFjZg&riu=http%3a%2f%2ftop10tale.com%2fwp-content%2fuploads%2f2016%2f03%2fhd-flower-images-3.jpg&ehk=OuDccKR0K0ztD%2fULk1SPbXjYOqZUIbPzNGnBE51EY5o%3d&risl=&pid=ImgRaw&r=0" alt="flowerimage" width=300</h1>
+	<p>A flower, also known as a bloom or blossom, is the reproductive structure found in flowering plants (plants of the division Angiospermae). Flowers consist of a combination of vegetative organs – sepals that enclose and protect the developing flower, petals that attract pollinators, and reproductive organs that produce gametophytes, which in flowering plants produce gametes</p>
+    <style>
+		p{text-align:center;}
+	</style>
+	<h1 style="background-color:yellow" id="f2"><img src="https://th.bing.com/th/id/R.e7dbc6594512849be1ea185771587808?rik=er3aawAO92Ax8w&riu=http%3a%2f%2f2.bp.blogspot.com%2f-ngmjXmcrD2k%2fUj6AbaKlcOI%2fAAAAAAAAAaA%2ffnlfDYl1pQ4%2fs1600%2fImage%2bof%2bflowers-Red-Abstract-Rose-Hd-Wallpaper-picture-of-flowers.jpg&ehk=tJyozS2Sj%2b7yHjzZcjqoQtoeUVZhn2vbbuZQXh8GiJI%3d&risl=&pid=ImgRaw&r=0" alt="roseimage"width=250</h1>
+	<p>Browse and download over 10,000 rose photos for free from Pexels, a platform that offers high-quality videos and images for personal and commercial use. Find rose images of different colors, shapes, and occasions, such as red rose, pink rose, wedding rose</p>
+
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
