--- a/main.html
+++ b/main.html
@@ -6,17 +6,15 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
-<body style="background-color: yellow" >
+<body>
 	<div>
-        <h1 id="f1" >Flowers photo </h1>
-        <p style="text-align: center">A flower, also known as a bloom or blossom, is the reproductive structure found in flowering plants (plants of the division Angiospermae). Flowers consist of a combination of vegetative organs – sepals that enclose and protect the developing flower, petals that attract pollinators, and reproductive organs that produce gametophytes, which in flowering plants produce gametes. The male gametophytes, which produce sperm, are enclosed within pollen grains produced in the anthers. The female gametophytes are contained within the ovules produced in the carpels</p>
-    </div>
-    
+		<h1 id="f1">"Flowers photos"</h1>
+		<p>Should show information about the flower</p>
+	</div>
     <div>
-        <h1 id="f2" >Rose photos</h1>
-
-<p style="text-align: center"> There are over three hundred species and tens of thousands of cultivars. The flowers of the rose grow in many different colors, from the well-known red rose or yellow rose and sometimes white or purple rose.</p>
-    </div>
+		<h1 id="f2">"Roses pictures"</h1>
+		<p>Should show information about the flower</p>
+	</div>
     
 
 
